Adding total cost handlers and updating swagger
